--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,11 @@ spring:
       hibernate:
         format_sql: true
         #         show_sql: true
-
+  
+  thymeleaf:
+    prefix: classpath:/templates/
+    suffix: .html
+    
 logging:
   level:
     org.hibernate.SQL: debug
